objects/Call__c.object
<CustomObject>
    <fields>
        <fullName>ABCO_Value_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABCO Value Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ABC_Benchmarks__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>ABC Benchmarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ABC_Rep_is_Current_User__c</fullName>
        <description>Field to be used as filter on reports</description>
        <formula>IF( ABC_Representative__c =  $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABC Rep is Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ABC_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABC Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_PT_Memberships__c</fullName>
        <description>Created as a part of CR 3884</description>
        <formula>Institution__r.Active_PT_Memberships__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active PT Memberships</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_RI_Memberships__c</fullName>
        <description>Created as a part of CR 3884</description>
        <formula>Institution__r.Active_RI_Memberships__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active RI Memberships</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_ABC_Attendees__c</fullName>
        <description>Created as part of CR-3833</description>
        <label>Additional ABC Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Attendees__c</fullName>
        <description>Created as part of CR-3833</description>
        <label>Additional Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Training_Options__c</fullName>
        <description>Created as a part of CR 3884</description>
        <inlineHelpText>Rev Cycle DAs please enter other optional dates indicated by member.  If none are entered, trainer will coordinate with member contacts indicated below.</inlineHelpText>
        <label>Additional Training Options</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Training_Sessions__c</fullName>
        <inlineHelpText>Identify which sessions the member will need additional training for</inlineHelpText>
        <label>Additional Training Sessions</label>
        <picklist>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recredentialing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Addl_Request_Details__c</fullName>
        <label>Addl Request Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>$Organization.City &amp; &quot; , &quot; &amp; $Organization.State &amp; &quot; , &quot; &amp; $Organization.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_for_Materials__c</fullName>
        <label>Address for Materials</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Hands_Transition_Meeting__c</fullName>
        <label>All Hands Transition Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Version__c</fullName>
        <formula>Member__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Areas_Covered_in_Training__c</fullName>
        <label>Webinar Objective</label>
        <picklist>
            <picklistValues>
                <fullName>OPPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recredentialing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Reports</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of CR-3833</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribution_Policy_and_Methodology__c</fullName>
        <inlineHelpText>Please document the members&apos; attribution policy for case assignments.</inlineHelpText>
        <label>Attribution Policy and Methodology</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BA_Pod_Lead__c</fullName>
        <formula>TEXT( Member__r.Implementation_Pod__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Pod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Transition_Meeting__c</fullName>
        <label>BA Transition Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Analyst_del__c</fullName>
        <formula>Member__r.Recurring_Business_Analyst__r.FirstName  &amp; &quot; &quot; &amp; Member__r.Recurring_Business_Analyst__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Onsite_Notes__c</fullName>
        <inlineHelpText>Please include onsite details you would like to share from the training onsite here.</inlineHelpText>
        <label>CTI Onsite Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CTI_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTI Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Attendees__c</fullName>
        <label>Attendees</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Brief_Notes__c</fullName>
        <inlineHelpText>Brief Summary of Interaction</inlineHelpText>
        <label>Subject</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <inlineHelpText>Actual date member interaction took place (or was scheduled to take place if missed by member) - NOT date member interaction was scheduled or entered in Salesforce. (Required: Field Critical for MHI Calculations!)</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Missed_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if member interaction was scheduled but member did not attend</inlineHelpText>
        <label>Missed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Next_Steps__c</fullName>
        <inlineHelpText>Please document follow-up items here.</inlineHelpText>
        <label>Next Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>Holds the purpose of the event/call</description>
        <inlineHelpText>Required: Field Critical for MHI Calculations. Determines the purpose of the event/call.</inlineHelpText>
        <label>Interaction Category</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad-hoc Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendance at Partner Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benchmarking Report Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Management Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA Initiative Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA Initiative Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort - Attendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort - Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort - Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort Services Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI - CTI Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI - Web Training Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customization/Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliverable Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialogue Health Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Intensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Prewire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extract Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Deliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTP Discussion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaigns_Initiatives_of_Interest__c</fullName>
        <description>Created for CR-20160105-9490</description>
        <label>Campaigns/Initiatives of Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancelled_Did_Not_Occur__c</fullName>
        <description>Created as part of CR-3833</description>
        <formula>TEXT(Current_Status__c)= &apos;Cancelled&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled / Did Not Occur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Intel__c</fullName>
        <label>Competitive Intel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Training_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the member complete the training questionnaire?</inlineHelpText>
        <label>Completed Training Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>created as part of CR 3694</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conference_Room_Name__c</fullName>
        <inlineHelpText>Name of conference room where training will occur</inlineHelpText>
        <label>Conference Room Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Agenda_Shared_With_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Member has confirmed dates, times and sequence of training sessions.</inlineHelpText>
        <label>Confirmed Agenda Shared With Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <description>Created as part of CR-4268</description>
        <label>Constituent</label>
        <picklist>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CXO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-CXO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Required: Field Critical for MHI Calculations.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Contact)</relationshipLabel>
        <relationshipName>Member_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coordinating_Member_Contact_Email__c</fullName>
        <description>Created for CR-20150311-8751</description>
        <formula>Coordinating_Member_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinating Member Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinating_Member_Contact_Phone__c</fullName>
        <description>Created for CR-20150311-8751</description>
        <formula>Coordinating_Member_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinating Member Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinating_Member_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20150311-8751</description>
        <label>Coordinating Member Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Coordinating Member Contact)</relationshipLabel>
        <relationshipName>Member_Interactions7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <description>this is the unique identifier used for data integration with enterprise salesforce version for sales/marketing/finance. the counter id references an activity record in enterprise salesforce.</description>
        <externalId>true</externalId>
        <label>Counter ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Data_Period__c</fullName>
        <formula>Member__r.Current_Data_Period_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Data Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <inlineHelpText>Required: Field Critical for MHI Calculations.</inlineHelpText>
        <label>Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Dates to Member - Pending Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Training - Member Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Training - DA decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Accommodate - No Trainer Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Accommodate - DA Responsibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void - Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Additional Information Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Drafting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Out for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Incorporating Edits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Dev Internal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Legal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X - Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Pod_Lead__c</fullName>
        <formula>TEXT( Member__r.EHBI_Value_Pod__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Pod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Transition_Meeting__c</fullName>
        <label>DA Transition Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Issues_or_Site_Login_Notes__c</fullName>
        <description>Created for CR-20150311-8751</description>
        <label>Data Issues or Site Login (Notes)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Load_Frequency__c</fullName>
        <formula>text(Member__r.Load_Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Load Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Nuances__c</fullName>
        <label>Data Nuances</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Reference_Complete__c</fullName>
        <description>Created as part of CR-3833</description>
        <inlineHelpText>Date the actual Reference Call or Event took place.</inlineHelpText>
        <label>Date Reference Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <description>Created as part of CR-3833</description>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Scheduled__c</fullName>
        <description>Created as part of CR-3833</description>
        <label>Date Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <defaultValue>NOW ()</defaultValue>
        <label>Date/Time Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_in_Past_Year_Counter__c</fullName>
        <label>Date in Past Year Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dedicated_Advisor__c</fullName>
        <formula>Member__r.Dedicated_Advisor__r.FirstName &amp; &quot; &quot; &amp; Member__r.Dedicated_Advisor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dedicated Advisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departments_Participating_in_Training__c</fullName>
        <description>Created for CR-20150311-8751</description>
        <label>Departments Participating in Training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Development_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as part of CR 3694</description>
        <inlineHelpText>Please assign the member of the development team who is responsible for triaging requests in order to pass this request.</inlineHelpText>
        <label>Development Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Did_Member_Join__c</fullName>
        <description>Created as part of CR-3833</description>
        <inlineHelpText>Did the Member who received the reference join the ABC membership referred for?</inlineHelpText>
        <label>Did Member Join?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Automatically_E_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to override rules which automatically distribute member interaction notes by E-Mail</inlineHelpText>
        <label>Do Not Automatically E-Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_they_use_the_CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of CR 3884</description>
        <label>Do they use the CRM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_of_Web_based_Training__c</fullName>
        <description>CR-20120208-414</description>
        <inlineHelpText>Please enter # of hours: 1 day= 8 hours; 1.5 days= 12 hours; 2 days= 16 hours; 1/2 day= 4 hours</inlineHelpText>
        <label>Requested Training Duration (# of hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAB_Training_Focus__c</fullName>
        <description>Created for CR-20160105-9490.</description>
        <label>EAB Training Focus</label>
        <picklist>
            <picklistValues>
                <fullName>SSC Campus Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSC Campus Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSC Foundation Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSC Foundation Onsite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>E_mail_Notes_to_Crimson__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like to e-mail Notes, Next Steps, Attendees and Risk Notes to the Crimson team</inlineHelpText>
        <label>E-mail Notes to Crimson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effectiveness_of_Presenter_GPA__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Effectiveness of Presenter GPA</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effort_Description__c</fullName>
        <description>Description of activities that account for the cumulative effort hours.</description>
        <label>Effort Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effort_Hours__c</fullName>
        <inlineHelpText>The cumulative number of hours spent on preparation and delivery of this interaction.</inlineHelpText>
        <label>Effort Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>El_Type__c</fullName>
        <description>created as part of CR 3694</description>
        <label>EL Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplemental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scope</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Elapsed_Call_Date_to_Call_in_Force__c</fullName>
        <formula>datevalue(CreatedDate) - Call_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Call Date to Call in Force</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Confirmation_Sent_to_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Coordinators to update ticket once an email confirmation has been sent to the member.</inlineHelpText>
        <label>Email Confirmation Sent to Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Pre_Wire_Documentation_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Pre Wire Documentation Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhancement_Requests__c</fullName>
        <inlineHelpText>Please also create an enhancement request record under Member Support to notify the Product Manager</inlineHelpText>
        <label>Enhancement Requests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Purpose__c</fullName>
        <description>Created as part of CR-3833</description>
        <label>Event Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Speaking Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-on-One</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Presence__c</fullName>
        <description>CR-20120208-419</description>
        <label>Executive Presence</label>
        <picklist>
            <picklistValues>
                <fullName>CMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Performance Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Executive_Type__c</fullName>
        <description>Created as part of CR-3833</description>
        <label>Executive Type</label>
        <picklist>
            <picklistValues>
                <fullName>CXO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facilities_Location_Details__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Facilities/Location Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>